// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<div>
  <button
    class="undefined root s-B4OUyNjosq8C"
  >
    <a
      class="s-B4OUyNjosq8C"
      href="#/album/1"
    >
      <button
        class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-16_cxt0i8_cxt0i8 __w-16_cxt0i8_cxt0i8 __text-xs_cxt0i8_cxt0i8 actionable s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
      >
        <img
          alt="./cover.jpg"
          class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
          loading="lazy"
          src="./cover.jpg"
        />
         
      </button>
      <!--&lt;Image&gt;-->
    </a>
     
    <div
      class="track s-B4OUyNjosq8C"
    >
      <span
        class="title s-B4OUyNjosq8C"
      >
        Mama got a girlfriend
      </span>
       
      <span
        class="s-B4OUyNjosq8C"
      >
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
     
  </button>
  <!--&lt;Track&gt;-->
</div>
`;

exports[`With details 1`] = `
<div>
  <button
    class="undefined root s-B4OUyNjosq8C"
  >
    <a
      class="s-B4OUyNjosq8C"
      href="#/album/1"
    >
      <button
        class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-16_cxt0i8_cxt0i8 __w-16_cxt0i8_cxt0i8 __text-xs_cxt0i8_cxt0i8 actionable s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
      >
        <img
          alt="./cover.jpg"
          class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
          loading="lazy"
          src="./cover.jpg"
        />
         
      </button>
      <!--&lt;Image&gt;-->
    </a>
     
    <div
      class="track s-B4OUyNjosq8C"
    >
      <span
        class="title s-B4OUyNjosq8C"
      >
        Mama got a girlfriend
      </span>
       
      <span
        class="s-B4OUyNjosq8C"
      >
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
    <div
      class="duration s-B4OUyNjosq8C"
    >
      2:06
    </div>
     
  </button>
  <!--&lt;Track&gt;-->
</div>
`;

exports[`With menu 1`] = `
<div>
  <button
    class="undefined root s-B4OUyNjosq8C"
  >
    <a
      class="s-B4OUyNjosq8C"
      href="#/album/1"
    >
      <button
        class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-16_cxt0i8_cxt0i8 __w-16_cxt0i8_cxt0i8 __text-xs_cxt0i8_cxt0i8 actionable s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
      >
        <img
          alt="./cover.jpg"
          class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
          loading="lazy"
          src="./cover.jpg"
        />
         
      </button>
      <!--&lt;Image&gt;-->
    </a>
     
    <div
      class="track s-B4OUyNjosq8C"
    >
      <span
        class="title s-B4OUyNjosq8C"
      >
        Mama got a girlfriend
      </span>
       
      <span
        class="s-B4OUyNjosq8C"
      >
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
     
    <span
      aria-expanded="false"
      aria-haspopup="menu"
      class="wrapper s-vOP9EO5q76eY"
    >
      <button
        class="iconOnly noBorder s-zdMNlEQUhDx4"
        data-testid="track-dropdown"
      >
        <i
          class="icons i-mdi-dots-vertical s-zdMNlEQUhDx4"
        />
         
         
        
         
      </button>
      <!--&lt;Button&gt;-->
    </span>
     
    
    <!--&lt;Dropdown&gt;-->
    <!--&lt;TrackDropdown&gt;-->
  </button>
  <!--&lt;Track&gt;-->
</div>
`;
